# LlamaIndex-hw

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  start.sh
db/init/: 001_cv_chunks.sql  002_lhw-index.sql
src/lhw/: cli.py
